RESOLVED FIXED54416
REGRESSION: Copy/paste from a WebKit window to a TextEdit window loses fonts.
https://bugs.webkit.org/show_bug.cgi?id=54416
Summary REGRESSION: Copy/paste from a WebKit window to a TextEdit window loses fonts.
Enrica Casucci
Reported 2011-02-14 15:18:32 PST
This is a regression introduced during the pasteboard refactoring.
Attachments
Patch (2.34 KB, patch)
2011-02-14 15:22 PST, Enrica Casucci
mitz: review+
Enrica Casucci
Comment 1 2011-02-14 15:22:41 PST
mitz
Comment 2 2011-02-14 15:25:49 PST
Comment on attachment 82371 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82371&action=review > Source/WebCore/platform/mac/PasteboardMac.mm:147 > + // Using different API for WebKit and WebKit2. Perhaps this should be a FIXME and explain what’s broken in the WebKit2 case (namely, no attributes) rather than just say the API is different.
Enrica Casucci
Comment 3 2011-02-14 15:45:11 PST
Note You need to log in before you can comment on or make changes to this bug.