Copy/paste from a WebKit window to a TextEdit window loses fonts. <rdar://problem/8623090> https://bugs.webkit.org/show_bug.cgi?id=54416

Reviewed by Dan Bernstein.

We don't have the complete solution that fixes this problem for WebKit2 yet.
This patch fixes the regression in WebKit.

* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::writeSelection): For WebKit2 use only plain text,
for WebKit use the original API to create the NSAttributedString.



Canonical link: https://commits.webkit.org/68516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78517 268f45cc-cd09-0410-ab3c-d52691b4dbfc